--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latin to Osmani - somali script</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Osmanya&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <h3>Far Somali - Latin &#8644; to Osmanya</h3>
       <p></p>
+      <textarea ></textarea>
+      <input type="submit" value="Badal">
     </div>
-    <textarea ></textarea>
 
     <script src="main.js"></script>
   </body>
