--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latin to Osmani - somali script</title>
+    
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Osmanya&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+    <title>Latin to Osmani - somali script</title>
   </head>
   <body>
     <div class="container">
-      <h3>Far Somali - Latin &#8644; to Osmanya</h3>
+      <h3>Far Somali - Latin to Osmanya</h3>
       <p></p>
-      <textarea ></textarea>
+      <textarea placeholder="Qor far Laatin..."></textarea>
       <input type="submit" value="Badal">
     </div>
 
